# ros2_learnings

./: README.md
install/: local_setup.sh  setup.sh
install/my_py_pkg/lib/my_py_pkg/: py_node_test
install/my_py_pkg/share/my_py_pkg/: package.sh
install/package_1/lib/package_1/: package-1_exec  package1_exec
install/package_1/share/package_1/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/src/: node_template.cpp  publisher_template.cpp  subscriber_template.cpp
my_robot_bringup/: package.xml
